# simple-utest

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .vale.ini  CMakeLists.txt  CODE_OF_CONDUCT.md  Config.cmake.in  Dockerfile  Makefile  Maketest.example.mk  Maketest.mk  README.md  cmake-default-init.sh  cmake-test-init.sh  compile_commands.json  docker-compose.yaml  docker-run-test.sh  run-test.sh  simple-utest.h
.github/workflows/: cmake-multi-platform.yml
demo/: demo  demo.c
doc/: index.md
header/: .deps.h  assert.h  assert.module.h  dead-simple-assert.h  dead-simple-log.h  dead-simple-register.h  dead-simple-test.h  entry.h  log.h  params.h  register.h
src/: CMakeLists.txt  assert.c  entry.c  log.c  register.c
src/header/: assert.h  assert.module.h  entry.h  log.h  register.h  simple-utest.h
test/: CMakeLists.txt  custom-struct-assert.c  custom-struct-assert.h  custom-struct.c  custom-struct.h  test-something-more.c  test-something.c
